Styling siden footer er i position absolute

--- a/CabinFeverReact/ClientApp/src/custom.css
+++ b/CabinFeverReact/ClientApp/src/custom.css
@@ -81,7 +81,7 @@ h1 {
         }
 
 .welcome-container {
-    padding: 50px;
+    padding: 50px 50px 25px 50px;
     margin: auto;
     width: 75%;
 }
